--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "stripe": "^16.12.0"
   },
   "devDependencies": {
+    "@axe-core/cli": "^4.10.2",
+    "lighthouse": "^12.8.1",
     "nodemon": "^3.1.4"
   }
 }
